<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".feature.sources.SourcesActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false">

            <LinearLayout
                android:id="@+id/sources_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_select_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:labelFor="@id/country_select">
                    <dev.dextra.newsapp.components.CustomAutoCompleteTextView
                        android:id="@+id/country_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_select_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:labelFor="@id/category_select">
                    <dev.dextra.newsapp.components.CustomAutoCompleteTextView
                        android:id="@+id/category_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ListStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/sources_list"
        tools:listitem="@layout/item_source"/>

    <include layout="@layout/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_safe_distance"
        tools:visibility="gone"/>

    <include layout="@layout/error_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_safe_distance"
        tools:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>